<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_activity_preference">
    <PreferenceCategory
        android:key="tracktor_category"
        android:title="@string/title_tracktor_category">

        <ListPreference
            android:defaultValue="@string/pref_default_value_unit"
            android:dialogTitle="@string/dialog_title_distance_unit"
            android:entries="@array/entries_list_preference_unit"
            android:entryValues="@array/entry_values_list_preference_unit"
            android:key="@string/pref_key_unit"
            android:title="@string/title_distance_unit" />

        <ListPreference
            android:defaultValue="@string/pref_default_value_shutdown"
            android:dialogTitle="@string/dialog_title_auto_shutdown"
            android:entries="@array/entries_list_preference_shutdown"
            android:entryValues="@array/entry_values_list_preference_shutdown"
            android:key="@string/pref_key_shutdown"
            android:title="@string/title_auto_shutdown" />

        <ListPreference
            android:defaultValue="@string/pref_default_value_compression"
            android:dialogTitle="@string/dialog_title_compression"
            android:entries="@array/entries_list_preference_compression"
            android:entryValues="@array/entry_values_list_preference_compression"
            android:key="@string/pref_key_compression"
            android:title="@string/title_compression_image" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="map_category"
        android:title="@string/title_map_category">

        <ListPreference
            android:defaultValue="@string/pref_default_value_start_marker"
            android:dialogTitle="@string/dialog_title_start_marker"
            android:entries="@array/entries_list_preference_markers"
            android:entryValues="@array/entry_values_list_preference_markers"
            android:key="@string/pref_key_start_marker"
            android:title="@string/title_start_of_road_marker" />

        <ListPreference
            android:defaultValue="@string/pref_default_value_end_marker"
            android:dialogTitle="@string/dialog_title_end_marker"
            android:entries="@array/entries_list_preference_markers"
            android:entryValues="@array/entry_values_list_preference_markers"
            android:key="@string/pref_key_end_marker"
            android:title="@string/title_end_of_road_marker" />

        <ListPreference
            android:defaultValue="@string/pref_default_value_width_line"
            android:dialogTitle="@string/dialog_title_width_line"
            android:entries="@array/entries_list_preference_width_line"
            android:entryValues="@array/entry_values_list_preference_width_line"
            android:key="@string/pref_key_width_line"
            android:title="@string/title_width_of_road_line" />

        <ListPreference
            android:defaultValue="@string/pref_default_value_color_line"
            android:dialogTitle="@string/dialog_title_color_line"
            android:entries="@array/entries_list_preference_color_line"
            android:entryValues="@array/entry_values_list_preference_color_line"
            android:key="@string/pref_key_color_line"
            android:title="@string/title_color_of_road_line" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="user_category"
        android:title="@string/title_user_category">

        <ListPreference
            android:defaultValue="@string/pref_default_value_gender"
            android:dialogTitle="@string/dialog_title_user_gender"
            android:entries="@array/entries_list_preference_gender"
            android:entryValues="@array/entry_values_list_preference_gender"
            android:key="@string/pref_key_gender"
            android:title="@string/title_user_gender" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_value_weight"
            android:dialogTitle="@string/dialog_title_user_weight"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:key="@string/pref_key_weight"
            android:lines="1"
            android:title="@string/dialog_title_user_weight" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_value_height"
            android:dialogTitle="@string/dialog_title_user_height"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:key="@string/pref_key_height"
            android:lines="1"
            android:title="@string/dialog_title_user_height" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_value_age"
            android:dialogTitle="@string/dialog_title_user_age"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:key="@string/pref_key_age"
            android:lines="1"
            android:title="@string/dialog_title_user_age" />

    </PreferenceCategory>
</PreferenceScreen>
